--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1333,29 +1333,60 @@ GtkTreeView {
     -adwaita-focus-border-color: mix(@theme_selected_fg_color, @theme_selected_bg_color, 0.30);
 }
 
-column-header {
-    padding: 1 2;
-}
+/*column-header {
+    padding: 0 4;
+}*/
 
 column-header.button,
 column-header .button {
-    border-width: 0 1 1 0;
-    border-radius: 0;
-    border-style: solid;
+    background-color: @theme_base_color;
+    background-image: none;
+    padding: 0 4;
+}
 
-    border-image: -gtk-gradient(linear,
-                                left top, left bottom,
-                                from(@button_border),
-                                to(shade (@button_border, 1.23))) 1 stretch;
+column-header.button:active:focus:hover,
+column-header .button:active:focus:hover,
+column-header.button:active:focus,
+column-header .button:active:focus,
+column-header.button:active:hover,
+column-header .button:active:hover {
+    font: bold; /* doesn't work */
+}
+
+column-header.button:active:hover,
+column-header .button:active:hover,
+column-header.button:active:focus:hover,
+column-header .button:active:focus:hover {
+    color: white; /*doesn't work */
+    background-color: @theme_bg_color;
+    text-shadow: white 0 1;
+}
+
+/* this kinda is a gross hack, I'll do something better with border images */
+column-header.button:hover,
+column-header .button:hover,
+column-header.button:focus:hover,
+column-header .button:focus:hover,
+column-header.button:active:focus,
+column-header .button:active:focus {
+    background-color: @theme_base_color;
+    background-image: none;
+    border-width: 4 5 4 4;
+}
+
+column-header.button:hover:last-child,
+column-header:last-child .button:hover,
+column-header.button:focus:hover:last-child,
+column-header:last-child .button:focus:hover,
+column-header.button:active:focus:last-child,
+column-header:last-child .button:active:focus {
+    background-color: @theme_base_color;
+    background-image: none;
+    border-width: 4 5 4 4;
 }
 
 column-header .button GtkArrow {
     color: @internal_element_color;
-}
-
-column-header:nth-child(last).button,
-column-header:nth-child(last) .button {
-    border-width: 0 0 1 0;
 }
 
 row:hover {
