--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -97,14 +97,10 @@ NautilusSearchBar .entry.image {
 }
 
 NautilusFloatingBar {
-    background-image: -gtk-gradient (linear,
-                                     left top, left bottom,
-                                     from (shade (@notebook_tab_gradient_a, 0.97)),
-                                     to (shade (@notebook_tab_gradient_b, 0.90)));
+    background-color: @info_bg_color;
+    border-color: darker(@info_bg_color);
 
-    border-color: shade (@notebook_tab_gradient_b, 0.80);
-
-    border-radius: 3 3 0 0;
+    border-radius: 0;
     border-width: 1;
     border-style: solid;
 }
