--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
@@ -96,7 +96,7 @@
     background-image: url("assets/sidebar-radio-selected-prelight.svg");    
 }
 
-.entry {
+/*.entry {
     border-image: url("assets/entry-border-normal-dark.svg") 2 / 2 stretch;
 }
 
@@ -112,9 +112,9 @@ GtkComboBox.combobox-entry .button:hover:active,
 GtkComboBox.combobox-entry .button {
     border-image: url("assets/entry-border-normal-dark.svg") 2 / 2 2 2 0 stretch;
 }
+*/
 
 GtkScale.trough,
-GtkSwitch.trough,
 GtkScale.trough.horizontal {
     border-image: url("assets/trough-border-horizontal-dark.svg") 2 / 2 stretch;
 }
@@ -182,71 +182,4 @@ GtkScale.scale-has-marks-below.slider.vertical:insensitive {
     background-image: url("assets/scale-slider-marks-below-vertical-insensitive-dark.svg");
 }
 
-.button {
-    border-image: url("assets/button-border-dark.svg") 2 / 2 stretch;
-}
 
-.button:active,
-.toolbar .button:active,
-.button:hover:active,
-.toolbar .button:hover:active {
-    border-image: url("assets/button-active-border-dark.svg") 2 / 2 stretch;
-}
-
-.button.default {
-    border-image: url("assets/button-default-border-dark.svg") 3 / 3 stretch;
-}
-
-.primary-toolbar .toolbar .button:active,
-.primary-toolbar.toolbar .button:active,
-.primary-toolbar .toolbar .button:active:hover,
-.primary-toolbar.toolbar .button:active:hover {
-    border-image: url("assets/primary-toolbar-button-active-border-dark.svg") 4 / 4 stretch;
-}
-
-.toolbar .raised .button,
-.toolbar .raised.button {
-    border-image: url("assets/primary-toolbar-raised-button-border-dark.svg") 4 / 4 stretch;
-}
-
-
-/* nth-child for linked areas */
-.toolbar .raised.linked.button,
-.toolbar .raised.linked.button:active,
-.toolbar .raised.linked.button:active:hover,
-.toolbar .raised.linked .button,
-.toolbar .raised.linked .button:active,
-.toolbar .raised.linked .button:active:hover {
-    border-image: url("assets/primary-toolbar-raised-button-border-dark.svg") 4 / 4 0 stretch;
-}
-
-.toolbar .raised.linked.button:nth-child(first) ,
-.toolbar .raised.linked.button:active:nth-child(first),
-.toolbar .raised.linked.button:active:hover:nth-child(first),
-.toolbar .raised.linked:nth-child(first) .button,
-.toolbar .raised.linked:nth-child(first) .button:active,
-.toolbar .raised.linked:nth-child(first) .button:active:hover {
-    border-image: url("assets/primary-toolbar-raised-button-border-dark.svg") 4 / 4 0 4 4 stretch;
-}
-
-.toolbar .raised.linked.button:nth-child(last),
-.toolbar .raised.linked.button:active:nth-child(last),
-.toolbar .raised.linked.button:active:hover:nth-child(last),
-.toolbar .raised.linked:nth-child(last) .button,
-.toolbar .raised.linked:nth-child(last) .button:active,
-.toolbar .raised.linked:nth-child(last) .button:active:hover {
-    border-image: url("assets/primary-toolbar-raised-button-border-dark.svg") 4 / 4 4 4 0 stretch;
-}
-
-.progressbar,
-.entry.progressbar,
-.progressbar row,
-.progressbar row:hover,
-.progressbar row:selected,
-.progressbar row:selected:focused {
-    border-image: url("assets/progressbar-border-dark.svg") 3 / 3 stretch;
-}
-
-.progressbar.vertical {
-    border-image: url("assets/progressbar-border-vertical-dark.svg") 3 / 3 stretch;
-}
