--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -93,7 +93,6 @@
 
 @define-color progressbar_background_a #76b0ec;
 @define-color progressbar_background_b #1f72c6;
-/*@define-color progressbar_pattern #000000;*/
 @define-color progressbar_pattern @switch_slider_active_border;
 @define-color progressbar_border @switch_slider_active_border;
 
@@ -172,4 +171,4 @@
 @import url("gtk-widgets-assets.css");
 @import url("gnome-applications.css");
 @import url("gtk-widgets.css");
-/* @import url("window-unfocused.css"); */
+/* @import url("gtk-widgets-window-unfocused.css"); */
