--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -33,7 +33,7 @@
 @define-color button_raised_active_gradient_color_a @button_raised_gradient_color_b;
 @define-color button_raised_active_gradient_color_b @button_raised_gradient_color_a;
 
-@define-color insensitive_bg_color alpha(#0b0b0d, 0.0);
+@define-color insensitive_bg_color @theme_bg_color;
 @define-color insensitive_fg_color #535555;
 @define-color insensitive_border_color #535555;
 
