Widget theme: added an initial gap to notebooks as in the original mockups.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -651,6 +651,7 @@ GtkScrolledWindow.frame {
 
     -GtkNotebook-tab-overlap: 8;
     -GtkNotebook-tab-curvature: 6;
+    -GtkNotebook-initial-gap: 8;
 }
 
 .notebook GtkViewport {
