--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -33,7 +33,7 @@
 @define-color button_raised_active_gradient_color_a @button_raised_gradient_color_b;
 @define-color button_raised_active_gradient_color_b @button_raised_gradient_color_a;
 
-@define-color insensitive_bg_color @theme_bg_color;
+@define-color insensitive_bg_color shade(@insensitive_fg_color, 0.6);
 @define-color insensitive_fg_color #535555;
 @define-color insensitive_border_color #535555;
 
@@ -48,7 +48,7 @@
 
 @define-color switch_slider_color shade(@theme_bg_color, 0.95);
 @define-color switch_slider_active_border shade(@switch_trough_active_bg_a, 0.60);
-@define-color switch_slider_insensitive_bg @insensitive_border_color;
+@define-color switch_slider_insensitive_bg @theme_bg_color;
 
 @define-color switch_trough_active_color @theme_text_color;
 @define-color switch_trough_active_bg_a shade(@theme_selected_bg_color, 0.6);
