--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -59,13 +59,10 @@
 @define-color internal_element_prelight #333333;
 @define-color internal_element_insensitive shade (@internal_element_color, 0.75);
 
-@define-color progressbar_background_a #5893df;
-@define-color progressbar_background_b #2465ba;
-@define-color progressbar_pattern @switch_slider_active_border;
+@define-color progressbar_background_a shade(@theme_selected_bg_color, 1.15);
+@define-color progressbar_background_b shade(@theme_selected_bg_color, 0.8);
+@define-color progressbar_pattern @progressbar_background_b;
 @define-color progressbar_border @switch_slider_active_border;
-
-/*@define-color progressbar_background_a #76b0ec;
-@define-color progressbar_background_b #1f72c6;*/
 
 @define-color entry_text_color #000000;
 @define-color entry_background_a #848684;
@@ -91,6 +88,9 @@
 @define-color primary_toolbar_entry_fg #2e3436;
 
 @define-color expander_row_selected_color alpha (@theme_base_color, 0.60);
+
+@define-color inset_light_color alpha(white, 0.05);
+@define-color inset_dark_color alpha(black, 0.15);
 
 @define-color menu_controls_color #aaa8ac;
 
