--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
@@ -59,7 +59,9 @@ GtkSwitch.trough:active {
 .inline-toolbar.toolbar .button:active,
 .inline-toolbar.toolbar .button:active:hover,
 .inline-toolbar.toolbar .button:insensitive,
-.inline-toolbar.toolbar GtkToolButton .button:active {
+.inline-toolbar.toolbar GtkToolButton .button:active,
+.primary-toolbar GtkSwitch.trough,
+.primary-toolbar GtkSwitch.trough:insensitive {
     border-image: url("borders/primary-toolbar-generic-border.svg") 4 / 4 stretch;
     border-radius: 3;
     border-width: 2;
@@ -106,8 +108,8 @@ GtkSwitch.trough:active {
     border-width: 2;
 }
 
+/*
 GtkScale.trough,
-/*GtkSwitch.trough,*/
 GtkScale.trough.horizontal {
     border-image: url("assets/trough-border-horizontal.svg") 2 / 2 stretch;
 }
@@ -116,7 +118,6 @@ GtkScale.trough.vertical {
     border-image: url("assets/trough-border-vertical.svg") 2 / 2 stretch;
 }
 
-/*GtkSwitch.trough:active,*/
 GtkScale.progressbar.horizontal {
     border-image: url("assets/trough-active-border-horizontal.svg") 2 / 2 stretch;
 }
@@ -124,6 +125,7 @@ GtkScale.progressbar.horizontal {
 GtkScale.progressbar.vertical {
     border-image: url("assets/trough-active-border-vertical.svg") 2 / 2 stretch;
 }
+*/
 
 /* column-headers borders */
 column-header.button,
