--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1259,6 +1259,7 @@ GtkSwitch {
     font: bold condensed 10;
 }
 
+GtkScale.progressbar,
 GtkSwitch.trough:active {
     color: @switch_trough_active_color;
 }
