Widget theme: text-shadows on buttons.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
@@ -24,14 +24,10 @@ GtkSwitch.slider {
     box-shadow: 0 -1 inset alpha(white, 0.07), 0 1 inset @theme_base_color, 0 2 inset alpha(@button_border, 0.15);
 }
 
-/* Don't ask me why I need this one, seems like a bug to me eh */
-GtkScale.trough,
-GtkScale.trough row,
-GtkScale.trough row:hover {
-    background-image: -gtk-gradient (linear,
-    				     left top, left bottom,
-                                     from (@button_border),
-				     to (shade(@theme_bg_color, 0.94)));
-    border-image: none;
+.button {
+    text-shadow: @button_text_shadow 0 -1;
 }
 
+.button:insensitive {
+    text-shadow: none;
+}
