Widget theme: icon-shadow added to raised buttons and inline toolbar buttons, dimmed text shadow on pressed buttons in the light theme.

--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -20,7 +20,8 @@
 @define-color button_gradient_color_b shade (@theme_bg_color, 0.8);
 @define-color button_border #24282a;
 
-@define-color button_text_shadow alpha(black, 0.9);
+@define-color button_active_text_shadow black;
+@define-color button_text_shadow black;
 @define-color primary_toolbar_button_text_shadow alpha(black, 0.1);
 
 @define-color button_active_gradient_color_a shade (@button_gradient_color_b, 0.7);
