spinbutton: remove box-shadow from spinbuttons arrows

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -189,7 +189,6 @@ GtkTreeView .separator,
  *****************/
 .spinbutton .button {
     color: @internal_element_color;
-    box-shadow: none; /* Doesn't work */
 }
 
 .spinbutton .button:prelight,
@@ -210,6 +209,7 @@ GtkTreeView .separator,
     border-radius: 0;
     border-style: solid;
     border-image-width: 0 3;
+    box-shadow: none;
 }
 
 .spinbutton .button:nth-child(first),
