--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -141,7 +141,7 @@ GtkStatusbar {
 .entry {
     background-color: @theme_base_color;
 
-    border-style: none;
+    border-style: solid;
     border-width: 1;
     border-radius: 3;
 
@@ -203,33 +203,44 @@ GtkComboBox.combobox-entry .button:prelight,
 /*****************
  * GtkSpinButton *
  *****************/
-.spinbutton.button,
-.spinbutton.button:prelight,
-.spinbutton.button:active,
-.spinbutton.button:focused,
-.spinbutton.button:insensitive {
-    background-image: none;
-    background-color: alpha(@theme_base_color, 0.0);
-
-    border-style: none;
-    border-image: none;
-}
-
-.spinbutton.button {
+.spinbutton .button {
     color: @internal_element_color;
 }
 
-.spinbutton.button:prelight,
-.spinbutton.button:active {
+.spinbutton .button:prelight,
+.spinbutton .button:active {
     color: @internal_element_prelight;
 }
 
-.spinbutton.button:insensitive {
+.spinbutton .button:insensitive {
     color: @insensitive_border_color;
 }
 
-.spinbutton.entry {
-    padding: 0 6 0 1;
+.spinbutton .button,
+.spinbutton .button:prelight,
+.spinbutton .button:active,
+.spinbutton .button:focused,
+.spinbutton .button:insensitive  {
+    border-width: 0 1;
+    border-radius: 0;
+
+    border-image: none;
+    border-style: solid;
+    border-color: @button_border;
+}
+
+.spinbutton .button:nth-child(first),
+.spinbutton .button:nth-child(first):prelight,
+.spinbutton .button:nth-child(first):active,
+.spinbutton .button:nth-child(first):focused,
+.spinbutton .button:nth-child(first):insensitive,
+.spinbutton .button:nth-child(last),
+.spinbutton .button:nth-child(last):prelight,
+.spinbutton .button:nth-child(last):active,
+.spinbutton .button:nth-child(last):focused,
+.spinbutton .button:nth-child(last):insensitive {
+    border-style: none;
+    border-image: none;
 }
 
 /****************
