--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -850,6 +850,11 @@ GtkTreeMenu .menuitem * {
     background-color: alpha(@theme_base_color, 0.0);
 }
 
+.menuitem.check:active,
+.menuitem.radio:active {
+    background-color: transparent;
+}
+
 .menuitem.check:active {
     background-image: url("assets/checkbox-menuitem-checked.svg");
 }
@@ -917,6 +922,11 @@ GtkTreeMenu .menuitem * {
     border-style: none;
 
     /* background-image defined in -assets variant */
+}
+
+.radio:active,
+.check:active {
+    background-color: transparent;
 }
 
 /************
@@ -1022,6 +1032,7 @@ GtkTreeMenu .menuitem * {
 
 .primary-toolbar .toolbar .button:hover,
 .primary-toolbar.toolbar .button:hover {
+    background-color: transparent;
     background-image: -gtk-gradient (linear,
 				     left top, left bottom,
 				     from (alpha (@theme_base_color, 0.0)),
