--- a/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
@@ -30,7 +30,7 @@ GtkComboBox {
 }
 
 .button *:active,
-GtkComboBox:active {
+GtkComboBox *:active {
     text-shadow: @button_active_text_shadow 0 -1;
 }
 
@@ -40,13 +40,15 @@ GtkComboBox:active {
 .inline-toolbar .button,
 .button.raised *,
 .raised .button *,
-.inline-toolbar .button * {
+.inline-toolbar .button *,
+.spinbutton .button {
     icon-shadow: @button_text_shadow 0 -1;
 }
 
 .button.raised *:active,
 .raised .button *:active,
-.inline-toolbar .button *:active {
+.inline-toolbar .button *:active,
+.spinbutton .button:active {
     icon-shadow: @button_active_text_shadow 0 -1;
 }
 
