--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -192,16 +192,18 @@ GtkTreeView .separator,
  * GtkSpinButton *
  *****************/
 .spinbutton .button {
-    color: @internal_element_color;
+    color: @theme_text_color;
+    icon-shadow: @button_text_shadow 0 1;
+    padding: 2 6;
 }
 
-.spinbutton .button:prelight,
 .spinbutton .button:active {
-    color: @internal_element_prelight;
+    icon-shadow: @button_active_text_shadow 0 1;
 }
 
 .spinbutton .button:insensitive {
     color: @insensitive_border_color;
+    icon-shadow: none;
 }
 
 .spinbutton .button,
@@ -216,21 +218,21 @@ GtkTreeView .separator,
     box-shadow: none;
 }
 
-.spinbutton .button:nth-child(first),
-.spinbutton .button:nth-child(first):prelight,
-.spinbutton .button:nth-child(first):active,
-.spinbutton .button:nth-child(first):focused,
-.spinbutton .button:nth-child(first):insensitive {
+.spinbutton .button:first-child,
+.spinbutton .button:first-child:prelight,
+.spinbutton .button:first-child:active,
+.spinbutton .button:first-child:focused,
+.spinbutton .button:first-child:insensitive {
     border-style: none;
     border-image: none;
 
     border-radius: 1 0 0 1;
 }
-.spinbutton .button:nth-child(last),
-.spinbutton .button:nth-child(last):prelight,
-.spinbutton .button:nth-child(last):active,
-.spinbutton .button:nth-child(last):focused,
-.spinbutton .button:nth-child(last):insensitive {
+.spinbutton .button:last-child,
+.spinbutton .button:last-child:prelight,
+.spinbutton .button:last-child:active,
+.spinbutton .button:last-child:focused,
+.spinbutton .button:last-child:insensitive {
     border-style: none;
     border-image: none;
 
@@ -408,7 +410,7 @@ GtkScrolledWindow.frame {
     text-shadow: @button_text_shadow 0 1;
 }
 
-.button *:active * {
+.button *:active {
     text-shadow: @button_active_text_shadow 0 1;
 }
 
